Prevent selecting text on buttons on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -63,6 +63,8 @@ body {
   background-color: var(--bg);
   color: var(--fg);
   padding: 1rem;
+  -webkit-user-select: none;
+  user-select: none;
   &:active,
   &.active {
     color: var(--bg);
